--- a/package.json
+++ b/package.json
@@ -8,13 +8,19 @@
   "license": "ISC",
   "devDependencies": {
     "@axe-core/playwright": "^4.10.2",
+    "@eslint/js": "^9.31.0",
     "@playwright/test": "^1.54.1",
+    "@types/get-port": "^4.0.1",
     "@types/node": "^24.0.14",
     "eslint": "^9.31.0",
+    "eslint-plugin-react": "^7.37.5",
+    "globals": "^16.3.0",
     "husky": "^9.1.7",
     "lint-staged": "^16.1.2",
     "playwright-lighthouse": "^4.0.0",
-    "prettier": "^3.6.2"
+    "prettier": "^3.6.2",
+    "typescript": "^5.8.3",
+    "typescript-eslint": "^8.38.0"
   },
   "directories": {
     "test": "tests"
@@ -99,10 +105,10 @@
     "function-bind": "^1.1.2",
     "get-caller-file": "^2.0.5",
     "get-east-asian-width": "^1.3.0",
+    "get-port": "^7.1.0",
     "get-stream": "^5.2.0",
     "get-uri": "^6.0.5",
     "glob-parent": "^6.0.2",
-    "globals": "^14.0.0",
     "graceful-fs": "^4.2.11",
     "has-flag": "^4.0.0",
     "hasown": "^2.0.2",
@@ -155,6 +161,7 @@
     "ms": "^2.1.3",
     "nano-spawn": "^1.0.2",
     "natural-compare": "^1.4.0",
+    "net": "^1.0.2",
     "netmask": "^2.0.2",
     "once": "^1.4.0",
     "onetime": "^7.0.0",
