--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "devDependencies": {
+  "directories": {
+    "test": "tests"
+  },
+  "dependencies": {
     "acorn": "^8.15.0",
     "acorn-import-attributes": "^1.9.5",
     "acorn-jsx": "^5.3.2",
@@ -31,17 +34,7 @@
     "playwright-lighthouse": "^4.0.0",
     "prettier": "^3.6.2",
     "typescript": "^5.8.3",
-    "typescript-eslint": "^8.38.0"
-  },
-  "directories": {
-    "test": "tests"
-  },
-  "dependencies": {
-    "acorn": "^8.15.0",
-    "acorn-import-attributes": "^1.9.5",
-    "acorn-jsx": "^5.3.2",
-    "agent-base": "^7.1.4",
-    "ajv": "^6.12.6",
+    "typescript-eslint": "^8.38.0",
     "ansi-colors": "^4.1.3",
     "ansi-escapes": "^7.0.0",
     "ansi-regex": "^5.0.1",
